Fix style (scrollbar)
Fix problem detected in chrome browser

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -411,6 +411,7 @@ canvas
 	top:  0;
 	right: 0;
 	bottom: 0;
+	white-space: nowrap;
 	overflow-y: auto;
 }
 
